--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body>
-    <div class="bg-slate-300 h-screen flex justify-center items-center">
+    <div class="bg-slate-100 h-screen flex justify-center items-center">
       <div class="w-[28rem] h-[40rem] bg-white rounded-xl shadow-lg">
         <div
           class="flex justify-center items-center mt-4 border-b-2 border-gray-300"
         >
           <p class="text-2xl font-semibold cursor-pointer hover:underline mb-4">
-            Todo App with TailwindCSS
+            Todo App With TailwindCSS
           </p>
         </div>
-        <!-- TODO START -->
-        <div class="mt-5 mx-5">
+        <!--  Todo Start -->
+        <div class="mt-5">
           <div
-            class="border-b-2 border-gray-300 pb-2 flex justify-center items-center gap-3"
+            class="border-b-2 border-gray-300 pb-4 flex justify-center items-center gap-3"
           >
             <input
               type="text"
               placeholder="Enter Todo"
-              class="focus:outline-none focus:shadow-lg py-2 px-4 border rounded-lg capitalize"
+              class="focus:outline-none focus:shadow-lg px-4 py-2 border rounded-lg capitalize"
             />
             <button
               class="px-4 py-2 bg-slate-300 rounded-lg hover:bg-slate-400 duration-300"
@@ -33,24 +34,28 @@
             </button>
           </div>
         </div>
-        <!-- EXAMPLE TEMPLATE -->
+        <!-- example Template -->
         <div class="bodyy mx-5 mt-4">
-          <ul class="flex flex-col justify-center items-center">
-            <li class="border flex items-center w-full px-[1rem] min-h-[3rem] rounded-lg shadow-lg">
+          <ul class="flex flex-col justify-center items-center gap-2">
+            <li
+              class="border flex justify-between items-center w-full px-[1rem] min-h-[3rem] rounded-lg shadow-lg"
+            >
               Enter Todos
               <p class="hover:scale-125 cursor-pointer">
-                <i id="a" class="fa-sharp fa-solid fa-trash p-2 "></i>
+                <i id="a" class="fa-sharp fa-solid fa-trash p-2"></i>
               </p>
-            </li>
+            </li> 
           </ul>
         </div>
       </div>
     </div>
+
+    <!--  -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="script.js"></script>
     <script
       src="https://kit.fontawesome.com/5e98021036.js"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
   </body>
 </html>
